# vscode-textmate-scope-selector

./: .npmignore  Cargo.toml  LICENSE.md  README.md  main.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
release/: main.js
scripts/: wasm.js
src/: index.ts  lib.rs  selector.ts
test/: data.json  index.test.js
